objects/Team_Sell_Request__c/Team_Sell_Request__c.object-meta.xml
<CustomObject>
    <description>Record to be used for information to request a teal sell - approval process</description>
    <label>Team Sell Request</label>
    <nameField>
        <displayFormat>Team Sell Request {0000}</displayFormat>
        <label>Team Sell Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Sell Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>