objects/Team_Sell_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Related to Account Reference - Account Name</description>
    <label>Account Name</label>
    <referenceTo>AccountReference__c</referenceTo>
    <relationshipLabel>Team Sell Requests</relationshipLabel>
    <relationshipName>Team_Sell_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>