objects/Team_Sell_Request__c/fields/Opportunity_Discovery_Party__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Discovery_Party__c</fullName>
    <description>Who discovered the opportunity (Requestor or Partner)</description>
    <inlineHelpText>Who discovered the opportunity (Requestor or Partner)</inlineHelpText>
    <label>Opportunity Discovery Party</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Requestor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>