objects/Team_Sell_Request__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <description>Enter the name of the Partner</description>
    <inlineHelpText>Enter the name of the Partner</inlineHelpText>
    <label>Partner Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>