objects/Team_Sell_Request__c/fields/Partner_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Partner_Relationship__c</fullName>
    <description>What relationship does Partner have</description>
    <inlineHelpText>What relationship does Partner have</inlineHelpText>
    <label>Partner Relationship</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>